# mochi

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: app_loop.rs  app_state.rs  application.rs  blend_modes.wgsl  final_present_pass.rs  input_state.rs  main.rs
app/src/input_state/: action_map.rs  key.rs  mod.rs
app/src/shaders/: final_present.wgsl
app/src/toolbox/: mod.rs
app/src/tools/: brush_tool.rs  color_picker.rs  command.rs  debug_select_region_tool.rs  dotted_selection.wgsl  hand_tool.rs  mod.rs  rect_selection_tool.rs  tool.rs  transform_layer_tool.rs
app/src/tools/brush_engine/: brush_fragment.wgsl  mod.rs  stamp_brush.wgsl  stamping_engine.rs  stamping_engine_pass.rs
app/src/ui/: egui_ui.rs  mod.rs
application/: Cargo.toml
application/src/: app_loop.rs  application.rs  lib.rs
application/src/input_state/: key.rs  mod.rs
framework/: Cargo.toml
framework/src/: asset_id.rs  debug_utils.rs  depth_stencil_texture.rs  framebuffer.rs  framework.rs  lib.rs  mesh.rs  shader.rs  texture2d.rs  transform.rs
framework/src/asset_library/: mod.rs
framework/src/buffer/: mod.rs
framework/src/camera/: camera_2d.rs
framework/src/math/: box2d.rs  helpers.rs  mod.rs
framework/src/mesh/: mesh.rs  mesh_instance.rs  mod.rs  types.rs
framework/src/render_pass/: mod.rs  pass_bindable.rs  render_pass.rs  simple_passes.rs
framework/src/renderer/: draw_command.rs  mod.rs  render_pass_bindable.rs  renderer.rs  texture2d_draw_pass.rs
framework/src/scene/: mod.rs  transform.rs
framework/src/scene/camera/: camera_2d.rs  mod.rs
framework/src/shader/: mod.rs  shader.rs  shader_compiler.rs
framework/src/shader/default_shaders/: 2d_definitions.wgsl  2d_transformations.wgsl  common_definitions.wgsl  default_fragment.wgsl  default_vertex.wgsl  default_vertex_instanced.wgsl  simple_colored.wgsl  simple_shader.wgsl
framework/src/shaders/: default_fragment.wgsl  default_vertex.wgsl  default_vertex_instanced.wgsl
framework/src/texture/: gpu_texture.rs  mod.rs  texels.rs  texture.rs
framework/src/typed_buffer/: mod.rs
image_app/: Cargo.toml
image_app/src/: image_editor_app_loop.rs  main.rs
image_app/src/toolbox/: mod.rs
image_app/src/tools/: brush_tool.rs  color_picker.rs  debug_select_region_tool.rs  rect_selection_tool.rs  tool.rs  transform_layer_tool.rs
image_app/src/tools/brush_engine/: brush_fragment.wgsl  mod.rs  stamp_operation.rs  stamping_engine.rs
image_app/src/ui/: egui_ui.rs  mod.rs
image_editor/: Cargo.toml
image_editor/src/: lib.rs
image_editor/src/asset_library/: mod.rs
image_editor/src/image_editor/: ab_render_target.rs  blend_settings.rs  document.rs  image_editor.rs  image_editor_event.rs  mod.rs  render_to_canvas_pass.rs
image_editor/src/image_editor/document/: cpu_blitting_strategy.rs  document.rs  mod.rs  rendering_strategy.rs
image_editor/src/image_editor/layers/: bitmap_layer.rs  chunked_layer.rs  layer_draw_pass.rs  layer_fragment.wgsl  layer_tree.rs  layers.rs  mod.rs  texture2d_draw_pass.rs
image_editor/src/image_editor/selection/: mod.rs  selection_shape.rs
image_editor/src/image_editor/shaders/: dotted_selection.wgsl
image_editor/src/image_editor/tools/: hand_tool.rs  mod.rs  tool.rs
image_editor/src/layer/: bitmap_layer.rs  mod.rs
image_editor/src/shaders/: draw_layer.wgsl  draw_texture2d.wgsl  render_to_canvas.wgsl  simple_colored.wgsl  simple_shader.wgsl
image_editor/src/tools/: brush_tool.rs  hand_tool.rs  mod.rs  tool.rs
image_editor/src/tools/brush_engine/: mod.rs  stamp_brush.wgsl  stamping_engine.rs  stamping_engine_pass.rs
image_editor_app/: Cargo.toml
image_editor_app/src/: main.rs
image_editor_app/src/shaders/: final_present.wgsl
renderer/: Cargo.toml
renderer/src/: lib.rs
renderer/src/render_pass/: mod.rs  texture2d_draw_pass.rs
renderer/src/shaders/: draw_texture2d.wgsl
scene/: Cargo.toml
scene/src/: lib.rs  transform.rs
scene/src/camera/: camera_2d.rs  mod.rs
src/: main.rs  simple_shader.wgsl
src/framework/: framework.rs  instance_buffer.rs  mesh.rs  mod.rs  transform.rs  typed_buffer.rs
src/framework/camera/: camera_2d.rs  mod.rs
src/framework/render_pass/: render_pass.rs
src/image_editor/: layer.rs  mod.rs  thing_test.wgsl
src/image_editor/layer/: bitmap_layer.rs  mod.rs
src/shaders/: simple_shader.wgsl
