[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.2"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
anyhow="1.0.63"
lazy_static="1.4.0"
cgmath="0.18.0"
rand="0.8.5"

framework = { path = "../framework" }
image_editor = { path = "../image_editor" }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
