[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.2"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
anyhow="1.0.63"
cgmath="0.18.0"
rand="0.8.5"
bytemuck="1.12.1"
rfd = "0.10.0"
strum = "0.24.1"
strum_macros = "0.24.1"

framework = { path = "../framework" }
renderer = { path = "../renderer" }
scene = { path = "../scene" }
image_editor = { path = "../image_editor" }
egui = "0.19.0"
egui_wgpu_backend = "0.19.0"
egui_winit_platform = "0.16.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
