[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[lib]
name="framework"
path="src/lib.rs"
crate-type=["staticlib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.2"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
bytemuck = {version = "1.12.1", features = [ "derive" ] }
cgmath="0.18.0"
as-slice="0.2.1"
anyhow="1.0.63"
futures-intrusive = "0.4.0"
pollster = "0.2"

[dependencies.naga]
version="0.10.0"
features = ["validate", "wgsl-in"]


[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]