[package]
name = "image_editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["staticlib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
bytemuck = {version = "1.12.1", features = [ "derive" ] }
cgmath="0.18.0"
rfd = "0.10.0"
strum = "0.24.1"
strum_macros = "0.24.1"
once_cell = "1.16.0"


framework={path="../framework"}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies.uuid]
version = "1.2.1"
features = ["v4"]