[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framework = { path = "../framework" }
scene={path="../scene"}
cgmath="0.18.0"
bytemuck = {version = "1.12.1", features = [ "derive" ] }
wgpu = "0.13"